feat: persistencia en bd
